added to github

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -3,16 +3,16 @@
 <head>
 <meta charset="ISO-8859-1">
 <link rel="stylesheet" href="app.css">
-
+<script src="app.js"></script>
 <title>Incremental Game</title>
 </head>
 <body background="theme.png">
-	<h1> Cookie Clicker </h1>
+	<h1> Counter... </h1>
 		<input type = text>
 	<div class="f1">
 		<h3 class="r1"> {Resource Name}: </h3>
-		<h3 class="r1"> 1331 </h3>
-		<div class="block1 r1"><button type = button id="n1"> Click Me! </button></div>
+		<h3 class="r1" id="cs"> 0 </h3>
+		<div class="block1 r1" id="cs2"><button type = button id="n1"> Click Me! </button></div>
 	</div>
 	<div class="flex-container">
  		 <div id="d1">
