--- a/lab2/index.html
+++ b/lab2/index.html
@@ -3,12 +3,11 @@
 <head>
 <meta charset="ISO-8859-1">
 <link rel="stylesheet" href="app.css">
-<script src="app.js"></script>
 <title>Incremental Game</title>
 </head>
-<body background="theme.png">
+<body>
 	<h1> Counter... </h1>
-		<input type = text>
+		<input type = "text">
 	<div class="f1">
 		<h3 class="r1"> {Resource Name}: </h3>
 		<h3 class="r1" id="cs"> 0 </h3>
@@ -41,4 +40,5 @@
  		 </div>
 	</div>
 </body>
+<script src="app.js"></script>
 </html>
